# TIC-TAC-TOE

./: .gitignore  Algo.py  CHANGELOG.md  ChessBoard.py  Game.py  LICENSE  README.md  View.py  main.py
frontend/: play.py
frontend/console/: __main__.py  args.py  cli.py  players.py  renderers.py
lib/: pyproject.toml
lib/src/tic_tac_toe.egg-info/: PKG-INFO  SOURCES.txt
lib/src/tic_tac_toe/game/: engine.py  players.py  renderer.py  test.py
lib/src/tic_tac_toe/logic/: algorithms.py  entities.py  exceptions.py  mark.py  models.py  test.py  tt.py  validators.py
